--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@prisma/client": "^5.0.0",
     "@types/multer": "^2.0.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
